--- a/README
+++ b/README
@@ -15,9 +15,9 @@
 5. main.py: File chạy chương trình
      + Tại đây chỉ gọi chức năng không tạo chức năng
 
-### Go takou wo oinorishimasu :333
+### Subete ga umaku ikimasu you ni :333
            ／＞　 フ
-           | 　_　_| 
+           | _　_| 
         ／` ミ＿vノ 
        /　　　　 |
       /　 ヽ　　 ﾉ
@@ -25,3 +25,13 @@
 ／￣|　　 |　|　| 
 (￣ヽ＿_ヽ_)__)
 ＼二)
+
+
+
+||||||||||||||
+ten chuc nang
+||||||||||||||
+|1.          |
+|2.          |
+|3.          |
+||||||||||||||
